# orchard-slam

./: .gitignore  README.md  TODO.md
amiga_description/: TODO.md  package.xml  setup.cfg  setup.py
amiga_description/config/: amiga_controllers.yaml  diff_drive_controller.yaml
amiga_description/launch/: amiga.launch.py  amiga_gazebo_launch.py  amiga_gzsim.launch.py  amiga_gzsim_launch.py
amiga_description/urdf/: amiga.urdf  amiga.urdf.xacro  amiga_body.urdf.xacro  amiga_gps.urdf.xacro  amiga_imu.urdf.xacro  amiga_lidar.urdf.xacro  amiga_macro.urdf.xacro  amiga_ros2_control.urdf.xacro  amiga_wheel.urdf.xacro
maps/: README.md
orchard_nav/: package.xml  setup.cfg  setup.py
orchard_nav/config/: nav2_params.yaml
orchard_nav/launch/: nav.launch.py
orchard_nav/orchard_nav/: nav_state.py  orchard_nav.py  orchard_nav_v0.py  orchard_row.py  robot_behavior.py  tree_detection.py
orchard_nav/params/: nav2_params.yaml
orchard_slam/: package.xml  setup.cfg  setup.py
orchard_slam/config/: ekf_global.yaml  ekf_local.yaml  mag_declination_corvallis.json  navsat.yaml  slam_toolbox_lifelong.yaml
orchard_slam/launch/: slam.launch.py
orchard_slam_bringup/: package.xml  setup.cfg  setup.py
orchard_slam_bringup/launch/: orchard_slam.launch.py  orchard_slam_bringup.launch.py
orchard_slam_bringup/orchard_slam_bringup/: base_node.py  joystick_teleop.py  keyboard_teleop.py  logger_node.py  record_bag_node.py  tf_node.py
orchard_slam_bringup/rviz/: orchard_slam.rviz
orchard_slam_bt/: package.xml  setup.cfg  setup.py
orchard_slam_bt/launch/: bt_orchard_slam.launch.py  orchard_slam_bt.launch.py
orchard_slam_bt/orchard_slam_bt/: orchard_slam_tree.py  run_slam_tree.py
orchard_slam_gazebo/: package.xml  setup.cfg  setup.py
orchard_slam_gazebo/launch/: orchard_slam_gazebo.launch.py
orchard_slam_gazebo/orchard_slam_gazebo/: mesh_objects.py  orchard_layout_node.py  spawn_trees.py
orchard_slam_gazebo/worlds/: orchard_template.sdf  small_orchard.sdf  small_orchard2.sdf  sphere_test.sdf
orchard_slam_interfaces/orchard_msgs/: CMakeLists.txt  package.xml
orchard_slam_interfaces/ros2bag_msgs/: CMakeLists.txt  package.xml
orchard_slam_sensors/: CMakeLists.txt  package.xml
orchard_slam_sensors/include/orchard_slam_sensors/: gps_covariance_fixer_node.hpp  imu_covariance_fixer_node.hpp
orchard_slam_sensors/src/: gps_covariance_fixer_node.cpp  imu_covariance_fixer_node.cpp
(+20 files in other folders)
