<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orchard_slam_sensors</name>
  <version>0.0.0</version>
  <description>Sensor package for orchard slam because Gazebo cannot seem to publish covariances in their messages, for some stupid reason, even though it exists in the gazebo tags in the URDF...</description>
  <maintainer email="luke.strohbehn@gmail.com">lukestroh</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
